Change the validation method to use a single stream.